fixed group spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -49,19 +49,15 @@ p{
 }
 
 .me{
-  color: ghostwhite;
-  text-align: center;
-  text-shadow: 2px 2px black;
-  -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: black;
+  color: white;
+	font-size: 40px;
+	-webkit-text-stroke: 2px black;
 }
 
 .projects{
   color: ghostwhite;
   text-align: center;
   text-shadow: 2px 2px black;
-  -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: black;
 }
 
 .projects a{
